[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/ethnocentric/ethnocentric rg.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/img/Main Menu/background.jpg" type="Texture" id=2]
[ext_resource path="res://assets/img/Main Menu/Button.png" type="Texture" id=3]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=5]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform float scroll_speed = 0;

void fragment(){
    vec2 shifteduv = UV;
    shifteduv.x += TIME * scroll_speed;
    vec4 color = textureLod(TEXTURE, shifteduv, 0.0);
    COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 5 )
shader_param/scroll_speed = 0.01

[sub_resource type="DynamicFont" id=3]
size = 128
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 64
use_filter = true
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
material = SubResource( 2 )
scale = Vector2( 0.426667, 0.24 )
texture = ExtResource( 2 )
centered = false

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -790.5
margin_top = 200.0
margin_right = 790.5
margin_bottom = 354.0
custom_colors/font_color = Color( 0.929412, 0.960784, 0.972549, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 0.196078 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
custom_fonts/font = SubResource( 3 )
text = "Code Defenders"

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -704.0
margin_top = -568.0
margin_right = -113.0
margin_bottom = -402.0
rect_scale = Vector2( 0.75, 0.75 )
focus_mode = 0
custom_colors/font_color = Color( 0.929412, 0.960784, 0.972549, 1 )
custom_colors/font_color_hover = Color( 1, 0.815686, 0.305882, 1 )
custom_fonts/font = SubResource( 6 )
text = "Start"
icon = ExtResource( 3 )
flat = true
icon_align = 1

[node name="ControlsButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -192.0
margin_top = -568.0
margin_right = 399.0
margin_bottom = -402.0
rect_scale = Vector2( 0.75, 0.75 )
focus_mode = 0
custom_colors/font_color = Color( 0.929412, 0.960784, 0.972549, 1 )
custom_colors/font_color_hover = Color( 1, 0.815686, 0.305882, 1 )
custom_fonts/font = SubResource( 6 )
text = "Controls"
icon = ExtResource( 3 )
flat = true
icon_align = 1

[node name="SettingsButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 320.0
margin_top = -568.0
margin_right = 911.0
margin_bottom = -402.0
rect_scale = Vector2( 0.75, 0.75 )
focus_neighbour_left = NodePath("../StartButton")
focus_neighbour_right = NodePath("../QuitButton")
focus_mode = 0
custom_colors/font_color = Color( 0.929412, 0.960784, 0.972549, 1 )
custom_colors/font_color_hover = Color( 1, 0.815686, 0.305882, 1 )
custom_fonts/font = SubResource( 6 )
text = "Settings"
icon = ExtResource( 3 )
flat = true
icon_align = 1

[node name="SongsButton" type="Button" parent="."]
margin_left = 512.0
margin_top = 704.0
margin_right = 1103.0
margin_bottom = 870.0
rect_scale = Vector2( 0.75, 0.75 )
focus_mode = 0
custom_colors/font_color = Color( 0.929412, 0.960784, 0.972549, 1 )
custom_colors/font_color_hover = Color( 1, 0.815686, 0.305882, 1 )
custom_fonts/font = SubResource( 6 )
text = "Songs"
icon = ExtResource( 3 )
flat = true
icon_align = 1

[node name="QuitButton" type="Button" parent="."]
margin_left = 1024.0
margin_top = 704.0
margin_right = 1615.0
margin_bottom = 870.0
rect_scale = Vector2( 0.75, 0.75 )
focus_mode = 0
custom_colors/font_color = Color( 0.929412, 0.960784, 0.972549, 1 )
custom_colors/font_color_hover = Color( 1, 0.815686, 0.305882, 1 )
custom_fonts/font = SubResource( 6 )
text = "Quit"
icon = ExtResource( 3 )
flat = true
icon_align = 1

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="SongsButton" to="." method="_on_SongsButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
